--- a/about.css
+++ b/about.css
@@ -1,5 +1,5 @@
 
-* {
+ {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -206,4 +206,5 @@ body {
 .footer-links a:hover {
     opacity: 0.7;
 }
+
 
