updated product pages

--- a/Product Listing Page/products.css
+++ b/Product Listing Page/products.css
@@ -132,7 +132,7 @@ body {
   cursor:pointer;
 }
 
-/* ===== Footer ===== */
+/* ===== Footer  1 ===== */
 .site-footer {
   margin-top:40px;
   background:var(--accent);
@@ -182,7 +182,7 @@ body {
 }
 
 
-/* FOOTER */
+/* FOOTER  2 */
 .footer {
     width: 100%;
     background: #000;
