--- a/contact us/contact.css
+++ b/contact us/contact.css
@@ -103,12 +103,13 @@ cursor:pointer;
 
 /* Box styling for all main sections */
 .contact-box, .form-box, .faq-section {
-    border: 6px solid #00e6e6;
     border-radius: 30px;
     padding: 30px;
     width: 40%;
     min-width: 300px;
     box-sizing: border-box;
+     border: 2px solid #0eead6;
+     box-shadow: 15px 15px 15px 15px ;
 }
 
 
@@ -171,6 +172,8 @@ cursor:pointer;
     border-radius: 25px;
     padding: 25px;
     text-align: left;
+     border: 2px solid #0eead6;
+     box-shadow: 15px 15px 15px 15px ;
 }
 
 .faq-box h2 {
@@ -185,7 +188,7 @@ cursor:pointer;
 
 /* FOOTER */
 .footer {
-    width: 93%;
+    width: 100%;
     background: #000;
     color: white;
     padding: 10px 50px;
